force-app/main/default/objects/AI_Prompt_Action_Detail__c/AI_Prompt_Action_Detail__c.object-meta.xml
<CustomObject>
    <label>Prompt Action Detail</label>
    <nameField>
        <displayFormat>PD-{000000}</displayFormat>
        <label>Detail #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prompt Action Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>