force-app/main/default/objects/AI_Prompt_Action_Detail__c/fields/AI_Prompt_Action__c.field-meta.xml
<CustomField>
    <fullName>AI_Prompt_Action__c</fullName>
    <label>Prompt Action</label>
    <referenceTo>AI_Prompt_Action__c</referenceTo>
    <relationshipLabel>Prompt Action Details</relationshipLabel>
    <relationshipName>Prompt_Action_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>